styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  overflow-x: hidden;
  overflow-y: auto;
  margin: 0;
  height: 100vh;
  
body {
  font-family: 'Arial', sans-serif;
  height: 100vh;
  display: flex;
  flex-direction: column;
  padding-top: 40px;
  color: #000000;
  background-color: #f4f7fa;
  transition: background 0.3s, color 0.3s;
}

.dark-mode {
  color: #e0e0e0;
  background-color: #121212;
}

nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  background-color: #f4f7fa;
  padding: 10px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  color: #000000;
}

.dark-mode nav {
  color: #ffffff;
  background-color: #1e2227;
}

nav img {
  height: 30px;
  width: 30px;
  margin-right: 10px;
}

nav p {
  font-size: 20px;
  font-weight: bold;
}

nav a {
  text-decoration: none;
  margin: 0;
  padding: 0;
  display: inline-flex;
  color: #000;
  align-items: center;
}

nav button {
  position: absolute;
  top: 10px;
  right: 10px;
  padding: 10px 15px;
  font-size: 16px;
  font-weight: bold;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  background-color: #007bff;
  color: white;
  transition: background 0.3s, transform 0.2s;
}

nav button:hover {
  background-color: #0056b3;
}

nav button:active {
  transform: scale(0.95);
}
   
.dark-mode nav p,
.dark-mode nav a {
  color: #ffffff;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex: 1;
  background-color: #ffffff;
  text-align: center;
  padding-bottom: 10px;
  transition: background 0.3s, color 0.3s;
}

.dark-mode main {
  background-color: #121212;
}

main h1,
main h2,
main p {
  padding: 10px;
}

.intro-icon {
  background-color: #f4f7fa;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 240px;
  z-index: 900;
}

.dark-mode .intro-icon {
  background-color: #1e2227;
}

.intro-icon img {
  height: 150px;
  width: 150px;
  border-radius: 20px;
}

footer {
  text-align: center;
  background-color: #f4f7fa;
  padding: 20px;
}

.dark-mode footer {
  background-color: #1e2227;
}

footer a, main a {
  color: #000000;
  text-decoration: underline;
}

.dark-mode footer a, .dark-mode main a {
  color: #ffffff;
  text-decoration: underline;
}
    
footer a:hover,
main a:hover {
  color: #00bfff;
  text-decoration: underline;
}

.dark-mode footer a:hover, main a:hover {
  color: #f4f7fa;
  text-decoration: underline;
}

